[package]
name = "cnf-parser"
version = "0.1.1"
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"
repository = "https://github.com/robbepop/cnf-parser"
documentation = "https://docs.rs/cnf-parser"
keywords = ["sat", "satisfiability", "cnf", "parser"]
description = """Efficient and customizable CNF parser for SAT solving."""
categories = ["parsing"]

[features]
default = ["std"]
std = []
